--- a/client/client.css
+++ b/client/client.css
@@ -26,7 +26,7 @@ h1{
 .box{
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: flex-end;
     color:azure;
     font-weight: lighter;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -37,10 +37,10 @@ h1{
     margin: 10px 0;
     flex-wrap: wrap;
 }
-
-.WHENR{
-    display: flex;
-    align-items: stretch;
+.box div:last-child {
+    font-weight: lighter;
+    font-size: smaller;
+    color: dimgray;
 }
 
 input[type=text]{
