--- a/client/client.css
+++ b/client/client.css
@@ -26,7 +26,7 @@ h1{
 .box{
     display: flex;
     flex-direction: row;
-    align-items: flex-end;
+    align-items: flex-start;
     color:azure;
     font-weight: lighter;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -41,7 +41,21 @@ h1{
     font-weight: lighter;
     font-size: smaller;
     color: dimgray;
+    align-self: auto;
 }
+.box div:first-child{
+    align-self : center;
+    
+
+}
+.secondflex {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    
+    align-items: flex-start;
+}
+
 
 input[type=text]{
     background-color: #333;
