--- a/client/client.css
+++ b/client/client.css
@@ -35,25 +35,34 @@ h1{
     /*border: 2px solid #dedede;*/
     padding: 10px;
     margin: 10px 0;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
 }
-.box div:last-child {
+.firstflex{
+    align-self: center;
+}
+.WHEN{
     font-weight: lighter;
     font-size: smaller;
     color: dimgray;
-    align-self: auto;
-}
-.box div:first-child{
-    align-self : center;
-    
-
+    /*align-self: flex-end;*/
 }
 .secondflex {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: nowrap;
-    
+    margin-left: 0;
+    align-items: flex-end;
+}
+.BIG{
+    display : flex;
+    flex-direction: column;
     align-items: flex-start;
+    column-gap: 5px;
+
+}
+.thirdflex{
+    align-self: flex-start;
+
 }
 
 
