--- a/client/client.css
+++ b/client/client.css
@@ -36,15 +36,21 @@ h1{
     padding: 10px;
     margin: 10px 0;
     flex-wrap: nowrap;
+    margin-left: 5px;
 }
 .firstflex{
-    align-self: center;
+    align-self: flex-start;
+    margin-top: 5px;
+}
+.ID{
+    font-weight: normal;
 }
 .WHEN{
     font-weight: lighter;
     font-size: smaller;
     color: dimgray;
     /*align-self: flex-end;*/
+    margin-left: 10px;
 }
 .secondflex {
     display: flex;
@@ -58,10 +64,12 @@ h1{
     flex-direction: column;
     align-items: flex-start;
     column-gap: 5px;
+    margin-left: 10px;
 
 }
 .thirdflex{
     align-self: flex-start;
+    margin-top: 5px;
 
 }
 
@@ -101,7 +109,7 @@ div.bottom :first-child {
 }
 
 * {
-    margin: 10px;
+    /*margin: 10px;*/
     padding: 0px;
     box-sizing: border-box;
     background-color: #1e2124;
