--- a/client/client.css
+++ b/client/client.css
@@ -222,7 +222,22 @@ header {
     width: 100%; 
     text-align : center;
 }
+#box{
+    padding: 8px;
+    font-size: 20px;
+    color: gray;
+    /* font-weight: lighter; */
+    /* display: block; */
+    transition: 0.3s;
+    margin-top: 50px;
+    margin-left: 50px;
+}
+
+#box div.hover{
+    color: #f1f1f1;
+}
 .overlay a {
+    margin : auto;
     padding: 8px;
     text-decoration: none;
     font-size: 36px;
@@ -230,9 +245,9 @@ header {
     display: block;
     transition: 0.3s;
   }
-  .overlay a:hover, .overlay a:focus {
+.overlay a:hover, .overlay a:focus {
     color: #f1f1f1;
-  }
+}
 .overlay .closebtn {
     position: absolute;
     top: 20px;
